<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="profile"
        android:title="@string/profile" />

    <SwitchPreference
        android:key="chisel_enabled"
        android:title="@string/chisel_socks" />

    <PreferenceCategory
        android:key="chisel_category"
        android:title="@string/chisel_server_desc"
        android:dependency="chisel_enabled">

        <EditTextPreference
            android:key="chisel_server"
            android:title="@string/chisel_server"/>

        <EditTextPreference
            android:key="chisel_additional_remotes"
            android:singleLine="true"
            android:title="@string/chisel_additional_remotes" />

        <EditTextPreference
            android:key="chisel_username"
            android:singleLine="true"
            android:title="@string/chisel_username" />

       <EditTextPreference
            android:key="chisel_password"
            android:singleLine="true"
            android:title="@string/chisel_password" />

       <EditTextPreference
            android:key="chisel_fingerprint"
            android:singleLine="true"
            android:title="@string/chisel_fingerprint" />

        <EditTextPreference
            android:key="chisel_max_retry_count"
            android:singleLine="true"
            android:title="@string/chisel_max_retry_count" />

        <EditTextPreference
            android:key="chisel_max_retry_interval"
            android:singleLine="true"
            android:title="@string/chisel_max_retry_interval" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/connection">

        <EditTextPreference
            android:key="server_ip"
            android:singleLine="true"
            android:title="@string/server_ip" />

        <EditTextPreference
            android:key="server_port"
            android:singleLine="true"
            android:title="@string/server_port" />

        <CheckBoxPreference
            android:key="ipv6_proxy"
            android:summary="@string/ipv6_proxy_sum"
            android:title="@string/ipv6_proxy" />

        <CheckBoxPreference
            android:key="udp_proxy"
            android:summary="@string/udp_proxy_sum"
            android:title="@string/udp_proxy" />

        <EditTextPreference
            android:dependency="udp_proxy"
            android:key="udp_gw"
            android:singleLine="true"
            android:title="@string/udp_gw" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/authentication">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auth_userpw"
            android:title="@string/auth_userpw" />

        <EditTextPreference
            android:dependency="auth_userpw"
            android:key="auth_username"
            android:singleLine="true"
            android:title="@string/auth_username" />

        <EditTextPreference
            android:dependency="auth_userpw"
            android:key="auth_password"
            android:singleLine="true"
            android:title="@string/auth_password" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced">

        <ListPreference
            android:entries="@array/adv_routes"
            android:entryValues="@array/adv_routes_values"
            android:key="adv_route"
            android:title="@string/adv_route" />

        <EditTextPreference
            android:key="adv_dns"
            android:singleLine="true"
            android:title="@string/adv_dns" />

        <EditTextPreference
            android:key="adv_dns_port"
            android:singleLine="true"
            android:title="@string/adv_dns_port" />

        <CheckBoxPreference
            android:key="adv_auto_connect"
            android:title="@string/adv_auto_connect" />

        <CheckBoxPreference
            android:key="adv_per_app"
            android:title="@string/adv_per_app" />

        <CheckBoxPreference
            android:dependency="adv_per_app"
            android:key="adv_app_bypass"
            android:summary="@string/adv_app_bypass_sum"
            android:title="@string/adv_app_bypass" />

        <EditTextPreference
            android:dependency="adv_per_app"
            android:key="adv_app_list"
            android:summary="@string/adv_app_list_sum"
            android:title="@string/adv_app_list" />

    </PreferenceCategory>

</PreferenceScreen>
